--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0",
     "vite-plugin-handlebars": "^2.0.0"
+  },
+  "dependencies": {
+    "promise-polyfill": "^8.3.0",
+    "whatwg-fetch": "^3.6.20"
   }
 }
