--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0",
-    "vite-plugin-handlebars": "^2.0.0"
+    "vite-plugin-handlebars": "^2.0.0",
+    "vite-plugin-singlefile": "^2.0.1"
   },
   "dependencies": {
     "promise-polyfill": "^8.3.0",
